--- a/ihaveasecret/templates/reveal.html
+++ b/ihaveasecret/templates/reveal.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}read{% endblock %}
+
 {% block content %}
     <h1 class="title"><i class="ri-mail-check-line"></i>&nbsp;Read a secret</h1>
 
@@ -10,7 +10,7 @@
 
     <div class="notification is-primary">
         <pre>
-            {{ secret.message }}
+            {{ secret_text }}
         </pre>
     </div>
 
