--- a/ihaveasecret/templates/confirm_reveal.html
+++ b/ihaveasecret/templates/confirm_reveal.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="title"><i class="ri-mail-check-line"></i>&nbsp;Read a secret</h1>
-    <a href="{{ reveal_url }}" class="button is-primary">Reveal secret</a>    
+    <h1 class="title"><i class="ri-mail-check-line"></i>&nbsp;{% trans %}Read a secret{% endtrans %}</h1>
+    <a href="{{ reveal_url }}" class="button is-primary">{% trans %}Reveal secret{% endtrans %}</a>    
 {% endblock %}
