--- a/ihaveasecret/templates/error.html
+++ b/ihaveasecret/templates/error.html
@@ -17,6 +17,6 @@
         </p>
     </div>
 
-    <a href="{{ url_for('ihaveasecret.create') }}" class="button is-primary">Create another secret</a>
+    <a href="{{ url_for('ihaveasecret.create') }}" class="button is-primary">{% trans %}Create another secret{% endtrans %}</a>
 
 {% endblock %}
