--- a/ihaveasecret/templates/check_password.html
+++ b/ihaveasecret/templates/check_password.html
@@ -5,7 +5,7 @@
     <h1 class="title"><i class="ri-lock-password-line"></i>&nbsp;Check password</h1>
 
     <div class="notification is-info">
-        <p><i class="ri-information-line"></i>The secret has been protected by a password. Enter it to reveal the secret</p>
+        <p><i class="ri-information-line"></i>{{ gettext('The secret is safeguarded by a password. Please enter the password to unveil the secret.') }}</p>
     </div>
 
     {% if error %}
@@ -16,11 +16,14 @@
 
     {% if remaining_attempts %}
     <div class="notification is-warning">
-        {% if remaining_attempts == 1 %}
-            <p><i class="ri-error-warning-line"></i>Be careful, you have <strong>only one attempt</strong> left.</p>
-        {% else %}
-            <p><i class="ri-error-warning-line"></i>You have {{ remaining_attempts }} attempts left.</p>
-        {% endif %}
+            <p>
+                <i class="ri-error-warning-line"></i>
+                {% if remaining_attempts == 1 %}
+                    <strong>{{ gettext('You have one remaining attempt left.') }}</strong>
+                {% else %}
+                    {{ gettext('You have %(n)d remaining attempts left.', n=remaining_attempts) }}
+                {% endif %}
+            </p>
     </div>
     {% endif %}
 
@@ -29,7 +32,7 @@
         <div class="field">
             <label class="label">Password</label>
             <div class="control">
-                <input class="input" type="password" name="password" placeholder="Your secret password">
+                <input class="input" type="password" name="password" placeholder="{{ gettext('Your secret password') }}">
             </div>
         </div>
         <div class="field">
@@ -40,4 +43,3 @@
     </form>
 
 {% endblock %}
-```
