--- a/ihaveasecret/templates/created.html
+++ b/ihaveasecret/templates/created.html
@@ -4,7 +4,7 @@
     <h1 class="title"><i class="ri-check-line"></i>&nbsp;Secret created</h1>
 
     <div class="notification is-success">
-        <p><i class="ri-checkbox-circle-line"></i>Your secret has been created, you can share this link to allow someone to read it:</p>
+        <p><i class="ri-checkbox-circle-line"></i>{% trans %}Your secret has been created. You can share this link to grant someone access to read it.{% endtrans %}:</p>
         <div class="control">
             <div class="columns">
                 <div class="column is-11">
@@ -18,10 +18,9 @@
     </div>
 
     <div class="notification is-info">
-        <p><i class="ri-information-line"></i>Be informed:</p>
-        <p>Your secret has been stored on the server and will be deleted after the time to live you've chosen, or when someone opens the link.</p>
-        <p>Therefore, the generated link can only be opened once.</p>
+        <p><i class="ri-information-line"></i>&nbsp;{% trans %}Your secret has been stored on the server and will be deleted either after the chosen time to live expires or when someone opens the link.{% endtrans %}</p>
+        <p>{% trans %}Therefore, the generated link can only be opened once.{% endtrans %}</p>
     </div>
 
-    <a href="{{ url_for('ihaveasecret.create') }}" class="button is-primary">Create another secret</a>
+    <a href="{{ url_for('ihaveasecret.create') }}" class="button is-primary">{% trans %}Create another secret{% endtrans %}</a>
 {% endblock %}
