--- a/ihaveasecret/templates/reveal.html
+++ b/ihaveasecret/templates/reveal.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="title"><i class="ri-mail-check-line"></i>&nbsp;Read a secret</h1>
+    <h1 class="title"><i class="ri-mail-check-line"></i>&nbsp;{% trans %}Read a secret{% endtrans %}</h1>
 
 
     <div class="notification is-info">
-        <p><i class="ri-information-line"></i>This message is displayed only once and will not be available anymore if this page is reloaded.</p>
+        <p><i class="ri-information-line"></i>{% trans %}This message is displayed only once and will not be available if this page is reloaded.{% endtrans %}</p>
     </div>
 
     <div class="notification is-primary">
@@ -14,6 +14,6 @@
         </pre>
     </div>
 
-    <a href="{{ url_for('ihaveasecret.create') }}" class="button is-primary">Create another secret</a>
+    <a href="{{ url_for('ihaveasecret.create') }}" class="button is-primary">{% trans %}Create another secret{% endtrans %}</a>
     
 {% endblock %}
