--- a/ihaveasecret/templates/reveal.html
+++ b/ihaveasecret/templates/reveal.html
@@ -5,7 +5,7 @@
 
 
     <div class="notification is-info">
-        <p><i class="ri-information-line"></i>{% trans %}This message is displayed only once and will not be available if this page is reloaded.{% endtrans %}</p>
+        <p><i class="ri-information-line"></i>&nbsp;{% trans %}This message is displayed only once and will not be available if this page is reloaded.{% endtrans %}</p>
     </div>
 
     <div class="notification is-primary">
