some javascript for giving an hint on the maximum input size, and the strength of the provided password

--- a/ihaveasecret/templates/base.html
+++ b/ihaveasecret/templates/base.html
@@ -3,9 +3,11 @@
 <head>
     <title>I Have A Secret</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='spy-line.png') }}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bulma.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='remixicon.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script src="{{ url_for('static', filename='zxcvbn.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='main.js') }}" defer></script>
 </head>
 <body>
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
