current locale on html tag

--- a/ihaveasecret/templates/base.html
+++ b/ihaveasecret/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="{{locale}}">
 <head>
     <title>I Have A Secret</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='spy-line.png') }}">
