add autocomplete attributes

--- a/ihaveasecret/templates/check_password.html
+++ b/ihaveasecret/templates/check_password.html
@@ -32,7 +32,7 @@
         <div class="field">
             <label class="label">Password</label>
             <div class="control">
-                <input class="input" type="password" name="password" placeholder="{{ gettext('Your secret password') }}">
+                <input class="input" type="password" name="password" placeholder="{{ gettext('Your secret password') }}" autocomplete="current-password">
             </div>
         </div>
         <div class="field">
