--- a/ihaveasecret/templates/create.html
+++ b/ihaveasecret/templates/create.html
@@ -32,7 +32,7 @@
     <div class="field">
         <label class="label"><i>({{ gettext('optional') }})</i> {{ gettext('Password') }}</label>
         <div class="control">
-            <input class="input" type="password" name="password" placeholder="{{ gettext('Your secret password') }}">
+            <input class="input" type="password" name="password" placeholder="{{ gettext('Your secret password') }}" autocomplete="new-password">
         </div>
     </div>
     <div class="field">
