allow the message author to give an explanation note at creation time

--- a/ihaveasecret/templates/check_password.html
+++ b/ihaveasecret/templates/check_password.html
@@ -4,6 +4,15 @@
 
     <h1 class="title"><i class="ri-lock-password-line"></i>&nbsp;Check password</h1>
 
+    {%if note %}
+    <p class="help">{% trans %}Note from the author of the message : {% endtrans %}</p>
+    <div class="notification is-primary">
+        <pre>
+            {{ note }}
+        </pre>
+    </div>
+    {% endif %}
+
     <div class="notification is-info">
         <p><i class="ri-information-line"></i>{{ gettext('The secret is safeguarded by a password. Please enter the password to unveil the secret.') }}</p>
     </div>
