--- a/ihaveasecret/templates/base.html
+++ b/ihaveasecret/templates/base.html
@@ -26,7 +26,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong><a target="_blank" href="https://github.com/jrialland/ihaveasecret">Ihaveasecret</a></strong> © 2024 <a target="_blank" href="https://github.com/jrialland">jrialland</a>.
+                <strong><a target="_blank" href="https://github.com/jrialland/ihaveasecret">Ihaveasecret</a></strong> © 2024-{{current_year}} <a target="_blank" href="https://github.com/jrialland">jrialland</a>.
             </p>
         </div>
     </footer>
