allow to notify someone by email when the secret is created

--- a/ihaveasecret/templates/base.html
+++ b/ihaveasecret/templates/base.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item" href="{{url_for('ihaveasecret.index')}}">
+            <a class="navbar-item" href="{{url_for('ihaveasecret.index')}}" title="Share secret messages securely">
                 <i class="ri-spy-line"></i>&nbsp;I Have A Secret
             </a>
         </div>
