--- a/ihaveasecret/templates/created_email.html
+++ b/ihaveasecret/templates/created_email.html
@@ -19,4 +19,9 @@
             </pre>
         </div>
         {% endif %}
+        <br>
+        {% if ttl %}
+        <p>PS : The message will expire after {% ttl %}</p>
+        {% endif %}
+
 </html>
