--- a/ihaveasecret/templates/create.html
+++ b/ihaveasecret/templates/create.html
@@ -2,12 +2,16 @@
 
 {% block content %}
 
+
 <h1 class="title"><i class="ri-spy-line"></i>&nbsp;{% trans %}Create a secret{% endtrans %}</h1>
+<h3 class="subtitle">{% trans %}Generate a message that can be read using a one-time link{% endtrans %}</h3>
 {% if error %}
 <div class="notification is-danger">
     <p><i class="ri-error-warning-line"></i>{{ error }}</p>
 </div>
 {% endif %}
+
+
 
 <form method="post" action="{{ url_for('ihaveasecret.create') }}">
     <input type="hidden" name="csrf_token" value="{{ make_csrf_token() }}">
